--- a/css/styles.css
+++ b/css/styles.css
@@ -71,6 +71,9 @@ h3 {
   font-weight: 500;
   letter-spacing: 0.02em;
 }
+.header-nav.header-activ {
+  color: blue;
+}
 .header-logo {
   color: var(--logocolor-right); /*#2e2f42*/
   font-family: 'Raleway';
@@ -122,9 +125,14 @@ h3 {
   display: flex;
   align-items: center;
   letter-spacing: 0.04em;
+  color: var(--background-btn-primary); /*#4d5ae5 */
+  background-color: var(--color-btn-primari);
+}
+.btn:hover,
+.btn:focus {
   color: var(--color-btn-primari);
   background-color: var(--background-btn-primary); /*#4d5ae5*/
-  /* background-color: blue; */
+  cursor: pointer;
 }
 
 /* .btn-filter {
