--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
   --address-color: #434455;
   --list-heder: #2e2f42;
   --header-color: #2e2f42;
+  --text-color-active-link: #4d5ae5;
   --tst: tomato;
   --background-color-ourteam: #f4f4fd;
   --logocolor-right-footer: #f4f4fd;
@@ -31,8 +32,7 @@
 body {
   background-color: var(--background-color); /*#ffffff;*/
   color: var(--body-color); /*#434455;*/
-  /* color: red; */
-  font-family: 'Roboto', 'sans-serif';
+  font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -55,37 +55,58 @@ h3 {
   line-height: 1.2;
   letter-spacing: 0.02em;
 }
+/* heder */
+.list-nav,
 .list {
+  color: var(--header-color); /*#2e2f42; */
   /* крапки списків */
   list-style: none;
-}
-
-/* heder */
-.header-address {
-  color: var(--body-color);
-  text-decoration: none;
-  font-style: normal;
-}
-.header-nav {
-  color: var(--colorheader); /*#2e2f42; */
   text-decoration: none;
   font-weight: 500;
   letter-spacing: 0.02em;
 }
-.header-nav.header-activ {
-  color: blue;
+
+.address {
+  color: var(--body-color);
+  font-style: normal;
+}
+
+.link {
+  color: var(--body-color);
+  text-decoration: none;
+}
+
+/* .header-address {
+  color: var(--body-color);
+  text-decoration: none;
+  font-style: normal;
+} */
+.header-nav {
+}
+.link.header-activ {
+  color: var(--text-color-active-link);
+  font-weight: bolder;
+}
+.link:hover {
+  color: var(--background-color);
+  background-color: var(--background-btn-primary);
 }
 .header-logo {
-  color: var(--logocolor-right); /*#2e2f42*/
-  font-family: 'Raleway';
+  color: var(--logocolor-left); /* #4d5ae5;*/
+  font-family: 'Raleway', sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  text-decoration: none;
 }
-.logo-left {
-  color: var(--logocolor-left); /* #4d5ae5;*/
+.header-logo:hover {
+  color: var(--background-color);
+  background-color: var(--background-btn-primary);
+}
+.logo-right {
+  color: var(--logocolor-right); /*#2e2f42*/
 }
 
 /* main (hero) */
@@ -108,7 +129,8 @@ h3 {
   background-color: black;
 }
 .footer-logo {
-  font-family: 'Raleway';
+  color: var(--logocolor-left); /* #4d5ae5;*/
+  font-family: 'Raleway', sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 21px;
@@ -116,7 +138,9 @@ h3 {
   align-items: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: var(--logocolor-right-footer); /* #f4f4fd;*/
+}
+.logo-right-footer {
+  color: var(--logocolor-right-footer);
 }
 .footer-paragraph {
   font-weight: 400;
