--- a/css/styles.css
+++ b/css/styles.css
@@ -68,9 +68,10 @@ body {
 .address {
   font-style: normal;
 }
-
-.link-header {
+.link-heder-color {
   color: var(--header-color); /*#2e2f42 */
+}
+.link-header {
   text-decoration: none;
   font-weight: 500;
   font-size: 16px;
@@ -168,7 +169,6 @@ body {
   font-size: 20px; /**/
   line-height: 1.2; /**/
   /* identical to box height, or 120% */
-
   letter-spacing: 0.02em; /**/
 
   /* NAVY BLUE */
